[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Button.gd" type="Script" id=1]
[ext_resource path="res://assets/misc/Amatic-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Button" type="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 156.578
margin_right = 150.0
margin_bottom = 256.578
rect_pivot_offset = Vector2( 150, 50 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fill" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.32263
margin_top = 10.0
margin_right = -10.6774
margin_bottom = -10.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.7717
margin_bottom = 21.2283
rect_pivot_offset = Vector2( 300, 30 )
custom_fonts/font = SubResource( 1 )
text = "Start"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickArea" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
[connection signal="pressed" from="ClickArea" to="." method="_on_ClickArea_pressed"]
